--- a/brewery-finder/src/pages/css files/Home.css
+++ b/brewery-finder/src/pages/css files/Home.css
@@ -33,29 +33,26 @@ body {
   color: #ffefcd;
 }
 
-/* .brewery-list-container {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-template-rows: 33% 33% 33%;
-  gap: 20px;
-} */
-
 .brewery-list {
   margin: auto;
-  width: 300px;
+  width: 100%;
   position: relative;
   top: -20px;
 }
 
 ul {
   padding-left: 0px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
 }
 
 .card {
   background-color: #e09132;
-  width: 300px;
+  width: 100%;
+  height: 180px;
   margin-bottom: 10px;
-  padding: 20px;
+  padding: 20px 40px;
   border-radius: 10px;
 }
 
@@ -63,26 +60,30 @@ li {
   list-style-type: none;
 }
 
+.details-container {
+  height: 50px;
+}
+
 .name {
   font-size: 18px;
 }
 
 .address {
-  margin: 5px 15px;
+  margin: 5px 30px;
   font-size: 14px;
 }
 
 .detailsBtn {
   background-color: #ffefcd;
   width: 120px;
-  margin-top: 10px;
   padding: 5px;
   border: 1px solid #ffefcd;
   border-radius: 15px;
   font-size: 12px;
+  cursor: pointer;
 
   position: relative;
-  left: 70px;
+  top: 40px;
 }
 
 .detailsBtn:hover {
