Added brewery map

--- a/brewery-finder/src/components/css files/NavBar.css
+++ b/brewery-finder/src/components/css files/NavBar.css
@@ -1,11 +1,12 @@
 .navbar-custom {
   background-color: #424530;
+  width: 100%;
 }
 
 .navlist-container {
   text-align: center;
   margin: auto;
-  gap: 10px;
+  gap: 70px;
 }
 
 .nav-button {
