--- a/brewery-finder/src/pages/css files/BreweryDetails.css
+++ b/brewery-finder/src/pages/css files/BreweryDetails.css
@@ -2,6 +2,13 @@
   width: 1000px;
   margin: auto;
   margin-top: 80px;
+
+  display: flex;
+  gap: 20px;
+}
+
+a {
+  width: 0px;
 }
 
 .back-btn {
@@ -14,9 +21,13 @@
 
 .indiv-details {
   width: 400px;
+  height: 350px;
   padding: 20px;
   border: 2px double #ffefcd;
   background-color: #e09132;
+
+  position: relative;
+  top: 50px;
 }
 
 .i-name {
@@ -27,6 +38,14 @@
 .fa-phone,
 .fa-laptop {
   padding-right: 10px;
+}
+
+.fa-thumbs-up,
+.fa-heart {
+  position: absolute;
+  left: 340px;
+  width: 30px;
+  height: 30px;
 }
 
 .i-address,
@@ -41,4 +60,17 @@
 
 .brewery-type {
   margin-left: 35px;
+}
+
+.google-maps-container {
+  width: 550px;
+  height: 500px;
+  margin-bottom: 150px;
+  position: relative;
+  top: 50px;
+}
+
+.google-maps {
+  width: 100%;
+  height: 500px;
 }
