--- a/brewery-finder/src/pages/css files/Wishlist.css
+++ b/brewery-finder/src/pages/css files/Wishlist.css
@@ -1,3 +1,56 @@
 body {
   background-color: #a58e74;
 }
+
+.container {
+  width: 1200px;
+}
+
+.wishlist-container {
+  width: 100%;
+  margin: auto;
+  margin-top: 80px;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+.wishlist-card {
+  width: 100%;
+  height: 350px;
+  padding: 20px;
+  border: 2px double #ffefcd;
+  background-color: #e09132;
+
+  position: relative;
+  top: 50px;
+}
+
+.i-name {
+  font-size: 20px;
+}
+
+.fa-location-arrow,
+.fa-phone,
+.fa-laptop {
+  padding-right: 10px;
+}
+
+.fa-location-arrow {
+  position: relative;
+  top: 25px;
+}
+.i-address,
+.i-number,
+.i-website {
+  margin-left: 10px;
+}
+
+.i-address2 {
+  margin-left: 25px;
+}
+
+.brewery-type {
+  margin-left: 35px;
+}
